--- a/src/components/HeaderComponent.css
+++ b/src/components/HeaderComponent.css
@@ -1,9 +1,9 @@
 .header-title{
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 .header-btns{
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .nav-list{
@@ -26,21 +26,19 @@
         margin-right: 20px;
     }
     .nav-list-item{
-        margin: 30px 0px;
+        margin: 10px 0px;
         padding: 5px 20px;
+    }
+
+    .nav-list-item:first-child{
+        margin-top: 30px;
     }
 }
 
 
 @media (min-width: 1024px){
-
-    .header-title{
-        margin-left: 20px;
-    }
-
     .nav-list{
         margin-top: 0px;
-        margin-right: 20px;
         gap: 0;
     }
     .nav-list-item{
