--- a/src/components/PresentationComponent.css
+++ b/src/components/PresentationComponent.css
@@ -10,3 +10,10 @@
     padding: 7px 20px;
     border-radius: 25px;
 }
+
+.github-link{
+    /* background-color: #333333; */
+    padding: 0;
+    margin: 0;
+}
+
