--- a/src/components/PresentationComponent.css
+++ b/src/components/PresentationComponent.css
@@ -1,3 +1,7 @@
+.presentation-container{
+    padding: 100px 0px;
+}
+
 .presentation{
     margin: 200px 0px 100px 0px;
 }
@@ -6,14 +10,13 @@
     margin-top: 20px;
 }
 
+.presentation-buttons span{
+    overflow-y: hidden;
+}
+
 .presentation-buttons a{
     padding: 7px 20px;
     border-radius: 25px;
 }
 
-.github-link{
-    /* background-color: #333333; */
-    padding: 0;
-    margin: 0;
-}
 
