--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+    overflow-x: hidden;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, figure, figcaption, blockquote, dl, dd {
