--- a/src/components/Header/HeaderComponent.css
+++ b/src/components/Header/HeaderComponent.css
@@ -20,34 +20,24 @@
     padding-left: 5px;
 }
 
+.nav-list-item:first-child{
+    margin-top: 30px;
+}
+
 @media (min-width: 768px){
-
-    .header-title{
-        margin-left: 20px;
-    }
-
     .nav-list{
-        margin-top: 0px;
         margin-right: 20px;
     }
     .nav-list-item{
-        margin: 10px 0px;
+        margin: 10px 0;
         padding: 5px 20px;
-    }
-
-    .nav-list-item:first-child{
-        margin-top: 30px;
     }
 }
 
 
 @media (min-width: 1024px){
-    .nav-list{
-        margin-top: 0px;
-        gap: 0;
-    }
     .nav-list-item{
-        margin: 30px 0px;
+        margin: 30px 0;
         padding: 5px 20px;
     }
 }
