--- a/src/components/AboutMe/AboutMeComponent.css
+++ b/src/components/AboutMe/AboutMeComponent.css
@@ -12,20 +12,59 @@
     padding: 0px 20px 0px 15px;
 }
 
-.aboutMe-information-personal, .aboutMe-information-university{
-    margin: 5px;
+
+
+.aboutMe-information-personal{
+    padding-top: 10px;
+    
 }
 
 .aboutMe-information-university{
-    padding: 5px 10px;
+    padding: 5px;
 }
 
 .aboutMe-text{
     margin: 2.5px 0px 10px 10px;
 }
 
-.aboutMe-information-university-title{
+.aboutMe-information-title{
     margin-top: 10px;
+}
+
+.last-title{
+    padding-left: 5px;
+    margin-bottom: 0;
+}
+
+.skills-container{
+    margin: 15px 0px;
+}
+
+.skills-title{
+    padding: 0px 0px 10px 15px;
+}
+
+.skillsTechnology{
+    cursor: pointer;
+    margin: 4px 5px;
+    padding:5px 15px;
+}
+
+.skillsTechnology span{
+    padding-left: 4px;
+}
+
+
+.skills-technologies-container{
+    margin: 0px 10px 10px 10px;
+}
+
+@media (min-width:768px) {
+    .aboutMe-information-skills{
+        margin-left: 20px;
+        padding: 10px 15px;
+        /* border: 1px solid red; */
+    }
 }
 
 @media (min-width:1024px) {
@@ -33,6 +72,12 @@
         margin: 100px 0px;
     }
     .aboutMe-information-university{
-        padding: 10px;
+        padding-right: 10px;
+        
     }
+    .aboutMe-information-university .aboutMe-information-title{
+        padding-right: 5px;
+    }
+    
 }
+
